# ciphermate

./: .env.example  .env.prod.template  .gitignore  ALL_ISSUES_FIXED_FINAL.md  API_DOCUMENTATION.md  AUTH0_API_SETUP_GUIDE.md  AUTH0_FIX_FINAL.md  AUTH0_INTEGRATION.md  AUTH0_SETUP.md  AUTHENTICATION_ASSESSMENT.md  AUTHENTICATION_FIX_INSTRUCTIONS.md  AUTHENTICATION_FIX_SUMMARY.md  AUTHENTICATION_FIX_V2.md  BACKEND_FRONTEND_STATUS.md  CLOUD_ENV_FIX.md  CURSOR.md  DEEPSEEK.md  DEMO_MODE_REMOVAL_SUMMARY.md  DEMO_SCENARIOS.md  DEPLOYMENT.md  EMAIL_DEMO_FIX_COMPLETE.md  EMAIL_FIX_SUMMARY.md  ERROR.md  ERROR_FIX_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_HACKATHON_READY.md  FIXES_APPLIED.md  FIXES_APPLIED_FINAL.md  FRONTEND_FIXES_APPLIED.md  GOOGLE_OAUTH_FIX.md  GOOGLE_OAUTH_SETUP.md  HACKATHON_FIX_COMPLETE.md  Hackathon.md  IDEA.md  IMPROVEMENT_PLAN.md  LOGIN_FIX_SUMMARY.md  PERMISSION_401_FIX.md  PITCH.md  PRESENTATION_MATERIALS.md  QUICK_START_GUIDE.md  (+39 more)
backend/: .env.example  .env.production  .env.template  AGENTS_SDK.md  API_INTEGRATION_README.md  AUDIT_SYSTEM_SUMMARY.md  AUTHENTICATION_VALIDATION_REPORT.md  DATABASE.md  DEMO_README.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  Dockerfile.simple  INTEGRATION_TEST_SUMMARY.md  PERMISSION_MANAGEMENT.md  SECURITY_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION_SUMMARY.md  alembic.ini  cloudbuild.yaml  debug_email.py  debug_env.py  demo_api_integration.py  demo_openai_agents.py  demo_performance_monitoring.py  demo_token_vault.py  demo_token_vault_complete.py  deploy-simple.sh  deploy.sh  list_gemini_models.py  main.py  manage_db.py  (+63 more)
(+251 files in other folders)
